<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_height="150dp"
    android:layout_margin="15dp"
    app:cardCornerRadius="15dp">

    <TextView
        android:id="@+id/tv_name_brewery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_brewery_txt"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="90dp"
        android:maxLines="3"
        android:layout_height="wrap_content"
        android:text="@string/phone_txt"
        android:layout_gravity="start|center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website_txt"
        android:layout_gravity="center"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_str"
        android:layout_gravity="end|center"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/state_str"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/city_str"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="@string/street_str"
        android:textSize="18sp" />

</androidx.cardview.widget.CardView>